--- a/client/src/component/Footer/style.css
+++ b/client/src/component/Footer/style.css
@@ -1,6 +1,8 @@
 .footer{
-    background: wheat !important;
-    height: 75px;
-    border-bottom: 10px solid black !important;
-    text-align: center !important;
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:60px;   
+    background:#6cf;
+    text-align: center;
 }
