--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,6 +6,10 @@
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
+a, i {
+  padding: 4%;
+  font-family: icons;
+}
 
 .App-header {
   background-color: #222;
